<resources>
    <string name="app_name">Digimind</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="remember_question">What do you want to remember?</string>
    <string name="reminder_field">Set reminder</string>
    <string name="days_question">When do you want to do it?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time_question">At what time?</string>
    <string name="time_field">Set time</string>
    <string name="btnDone">Done</string>
    <string name="exampleBoardTitle">Practice</string>
    <string name="exampleboardDays">Everyday</string>
    <string name="exampleBoardTime">17:00</string>
</resources>
