<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_board_background"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/cellTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/exampleBoardTitle"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/cellDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/exampleboardDays"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/cellTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/exampleBoardTime"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

</LinearLayout>